syntax = "proto3";

package todo;

service TodoGrpcService {
  rpc CreateTodo (CreateTodoRequest) returns (TodoResponse) {}
  rpc GetAllTodo (NoParameters) returns (TodoListResponse) {}
}

message NoParameters {}

message CreateTodoRequest {
  string message = 1;
  string userId = 2;
}

message TodoResponse {
  string id = 1;
  string userId = 2;
  string message = 3;
  bool completed = 4;
}

message TodoListResponse {
  repeated TodoResponse todos = 1;
}
