syntax = "proto3";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoResponse) {}
}

message CreateTodoRequest {
  string message = 1;
  int32 userId = 2;
}

message CreateTodoResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 id = 3;
  string message = 4;
}
